# remotePathSync

./: pyproject.toml
examples/: construct_your_own_pathrootpair.ipynb
src/remotePathSync/: pathroot.py  pathrootpair.py
