[project]
name = "remotePathSync"
dynamic = ["version"]
requires-python = ">=3.10"
authors = [{ name = "Ben Rich", email = "benjamin.rich@colorado.edu" }]

dependencies = [
    "numpy>=1.25.0,<3",
    "ase>=3.23.0",
    "pymatgen@git+https://github.com/benrich37/pymatgen.git",
    "ipykernel",
    "paramiko", # I believe this installs scp with it
]